@@ -1,0 +1,138 @@
+PREHOOK: query: DESCRIBE FUNCTION collect_set
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION collect_set
+POSTHOOK: type: DESCFUNCTION
+collect_set(x) - Returns a set of objects with duplicate elements eliminated
+PREHOOK: query: DESCRIBE FUNCTION EXTENDED collect_set
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION EXTENDED collect_set
+POSTHOOK: type: DESCFUNCTION
+collect_set(x) - Returns a set of objects with duplicate elements eliminated
+PREHOOK: query: SELECT key, collect_set(value)
+FROM src
+GROUP BY key ORDER BY key limit 20
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/var/folders/6g/6grtCwPMEf4sqHUPpy6xQG9ByHg/-Tmp-/heyongqiang/hive_2010-07-30_17-05-53_522_3530309455217069909/-mr-10000
+POSTHOOK: query: SELECT key, collect_set(value)
+FROM src
+GROUP BY key ORDER BY key limit 20
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/var/folders/6g/6grtCwPMEf4sqHUPpy6xQG9ByHg/-Tmp-/heyongqiang/hive_2010-07-30_17-05-53_522_3530309455217069909/-mr-10000
+0	["val_0"]
+10	["val_10"]
+100	["val_100"]
+103	["val_103"]
+104	["val_104"]
+105	["val_105"]
+11	["val_11"]
+111	["val_111"]
+113	["val_113"]
+114	["val_114"]
+116	["val_116"]
+118	["val_118"]
+119	["val_119"]
+12	["val_12"]
+120	["val_120"]
+125	["val_125"]
+126	["val_126"]
+128	["val_128"]
+129	["val_129"]
+131	["val_131"]
+PREHOOK: query: SELECT key, collect_set(value)
+FROM src
+GROUP BY key ORDER BY key limit 20
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/var/folders/6g/6grtCwPMEf4sqHUPpy6xQG9ByHg/-Tmp-/heyongqiang/hive_2010-07-30_17-06-01_685_2541220772134185861/-mr-10000
+POSTHOOK: query: SELECT key, collect_set(value)
+FROM src
+GROUP BY key ORDER BY key limit 20
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/var/folders/6g/6grtCwPMEf4sqHUPpy6xQG9ByHg/-Tmp-/heyongqiang/hive_2010-07-30_17-06-01_685_2541220772134185861/-mr-10000
+0	["val_0"]
+10	["val_10"]
+100	["val_100"]
+103	["val_103"]
+104	["val_104"]
+105	["val_105"]
+11	["val_11"]
+111	["val_111"]
+113	["val_113"]
+114	["val_114"]
+116	["val_116"]
+118	["val_118"]
+119	["val_119"]
+12	["val_12"]
+120	["val_120"]
+125	["val_125"]
+126	["val_126"]
+128	["val_128"]
+129	["val_129"]
+131	["val_131"]
+PREHOOK: query: SELECT key, collect_set(value)
+FROM src
+GROUP BY key ORDER BY key limit 20
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/var/folders/6g/6grtCwPMEf4sqHUPpy6xQG9ByHg/-Tmp-/heyongqiang/hive_2010-07-30_17-06-09_632_7957341289614848394/-mr-10000
+POSTHOOK: query: SELECT key, collect_set(value)
+FROM src
+GROUP BY key ORDER BY key limit 20
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/var/folders/6g/6grtCwPMEf4sqHUPpy6xQG9ByHg/-Tmp-/heyongqiang/hive_2010-07-30_17-06-09_632_7957341289614848394/-mr-10000
+0	["val_0"]
+10	["val_10"]
+100	["val_100"]
+103	["val_103"]
+104	["val_104"]
+105	["val_105"]
+11	["val_11"]
+111	["val_111"]
+113	["val_113"]
+114	["val_114"]
+116	["val_116"]
+118	["val_118"]
+119	["val_119"]
+12	["val_12"]
+120	["val_120"]
+125	["val_125"]
+126	["val_126"]
+128	["val_128"]
+129	["val_129"]
+131	["val_131"]
+PREHOOK: query: SELECT key, collect_set(value)
+FROM src
+GROUP BY key ORDER BY key limit 20
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/var/folders/6g/6grtCwPMEf4sqHUPpy6xQG9ByHg/-Tmp-/heyongqiang/hive_2010-07-30_17-06-23_542_3742508270905277781/-mr-10000
+POSTHOOK: query: SELECT key, collect_set(value)
+FROM src
+GROUP BY key ORDER BY key limit 20
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/var/folders/6g/6grtCwPMEf4sqHUPpy6xQG9ByHg/-Tmp-/heyongqiang/hive_2010-07-30_17-06-23_542_3742508270905277781/-mr-10000
+0	["val_0"]
+10	["val_10"]
+100	["val_100"]
+103	["val_103"]
+104	["val_104"]
+105	["val_105"]
+11	["val_11"]
+111	["val_111"]
+113	["val_113"]
+114	["val_114"]
+116	["val_116"]
+118	["val_118"]
+119	["val_119"]
+12	["val_12"]
+120	["val_120"]
+125	["val_125"]
+126	["val_126"]
+128	["val_128"]
+129	["val_129"]
+131	["val_131"]
